tests/good/typing/047-annoted-fun-case-pone.clap
** int -> string
val f = fun (x : int) => case { _ => "toto" }
