tests/bad/typing/025-fun-unification-2.clap
** int -> int
val f = fun (x) => ((x:int) = x)

val _ = f ('c')
